--- a/style.css
+++ b/style.css
@@ -52,6 +52,31 @@ a.text-light:hover {
   z-index: 2;
 }
 
+/*Main  begin service*/
+
+.overlay::after {
+  content: "";
+  background-color: #052164;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: .95;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.card-body, .card-img-top {
+  z-index: 3;
+}
+
+.card {
+  border: 0
+}
+
+.w-15 {
+  width: 15%!important;
+}
 
 /*Apper menu-right*/
 
