--- a/main-our-service-st.css
+++ b/main-our-service-st.css
@@ -6,17 +6,36 @@
   padding-top: 7rem;
   padding-bottom: 5rem;
 }
+
+.customize {
+  height: 5px;
+  width: 5px;
+  background-color: #00206e;
+}
+
+.customize::before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 50px;
+  background-color: #00206e;
+  top: 1px;
+  left: -55px;
+}
+
+.customize::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 50px;
+  background-color: #00206e;
+  top: 1px;
+  right: -55px;
+}
+
 @media (max-width: 991px){
     .h1 {
       font-size: 40px!important;
-    }
-
-    .header h6 {
-      white-space: nowrap;
-    }
-
-    .block-width {
-      max-width: 760px!important;
     }
 
     .p-100-70 {
@@ -37,11 +56,7 @@
     .h2 {
       font-size: 25px!important;
     }
-
-    .block-width {
-      max-width: 760px!important;
-    }
-
+    
     .p-100-70 {
       padding-top: 5rem;
       padding-bottom: 3rem;
